--- a/1/index.html
+++ b/1/index.html
@@ -3,7 +3,7 @@
 <head>
 </head>
 <body>
-<p><strong>目录</strong></p>
-<p><a href="https://zhuceyongaxiaohao.github.io/1/9787536692930.epub">三体</a></p>
+<p style="text-align: center;"><strong><span style="font-size: 18pt;">目录</span></strong></p>
+<p style="text-align: center;"><a href="https://zhuceyongaxiaohao.github.io/1/9787536692930.epub">三体</a></p>
 </body>
 </html>
