--- a/1/index.html
+++ b/1/index.html
@@ -6,5 +6,6 @@
 <p style="text-align: center;"><strong><span style="font-size: 18pt;">目录</span></strong></p>
 <p style="text-align: center;"><a href="https://zhuceyongaxiaohao.github.io/1/9787536692930.epub">《三体》</a></p>
 <p style="text-align: center;"><a href="https://zhuceyongaxiaohao.github.io/1/9787559471130.epub">《凛冬之刃》</a></p>
+<p style="text-align: center;"><a href="https://zhuceyongaxiaohao.github.io/1/9787530215593.epub">《活着》</a></p>
 </body>
 </html>
